[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
data_feed = {path = "../data_feed"}
strategy = {path = "../strategy"}
portfolio = {path = "../portfolio"}
anyhow = "1.0.89"
serde_derive = "1.0.210"
env_logger = "0.11.5"
log = "0.4.22"
toml = "0.8.19"
serde = "1.0.210"
axum = "0.7.7"
tokio = {version = "1.40.0", features = ["full"]}
lazy_static = "1.5.0"
